modify Srv methods

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
       <div class="content">
         <div class="line">
-          <button id="serve">circuits</button>
-          <button id="upload">upload</button>
+          <button id="read">read</button>
+          <button id="write">write</button>
         </div>
         <div id="space"></div>
         <div id="circuit-container">
