--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div id="header">
-      <h1><a href="/">Circuit Life</a></h1>
+      <h1>
+        <a href="https://balloon-stat.github.io/dot-circuit/">
+            Circuit Life
+        </a>
+      </h1>
     </div>
     <div class="outer-container">
       <div class="record-container">
@@ -50,8 +54,12 @@
       </div>
     </div>
     <div id="footer">
-      <div id="creator">by yuk</div>
     </div>
+      <div id="source">
+        <a href="https://github.com/balloon-stat/dot-circuit">
+          source: https://github.com/balloon-stat/dot-circuit
+        </a>
+      </div>
     <canvas id="map"></canvas>
     <canvas id="thumbnail"></canvas>
     <script>
