add GET mapdata function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="header">
       <h1>
-        <a href="https://balloon-stat.github.io/dot-circuit/">
+        <a href="index.html">
             Circuit Life
         </a>
       </h1>
@@ -62,11 +62,7 @@
       </div>
     <canvas id="map"></canvas>
     <canvas id="thumbnail"></canvas>
-    <script>
-      var mapkey      = "";
-      var init_origin = 0;
-      var init_dpp    = 20;
-    </script>
+
     <script src="gif.js"></script>
     <script src="circuit.js"></script>
   </body>
