--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Circuit Life</title>
+    <meta name="viewport" content="width=960">
+    <title>Dot Circuit</title>
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@balloon_stat">
+    <meta property="og:url" content="https://balloon-stat.github.io/dot-circuit">
+    <meta property="og:title" content="Dot Circuit">
+    <meta property="og:description" content="A toy circuit simulator page based on Conway's Game of Life.">
+    <meta property="og:image" content="https://balloon-stat.github.io/dot-circuit/site.png">
+
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="main.css">
   </head>
@@ -10,7 +19,7 @@
     <div id="header">
       <h1>
         <a href="index.html">
-            Circuit Life
+            Dot Circuit
         </a>
       </h1>
     </div>
