write span elements in info div

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           <div id="circuit-container">
             <canvas id="circuit" width="500" height="300"></canvas>
             <div id="nStep">0</div>
-            <div id="info"></div>
+            <div id="info">
+              <span id="dpp"> ×20 </span><span id="pos"> ( 0, 0 ) </span><span id="msg"></span>
+            </div>
           </div>
         </div>
       </div>
